Spring data rework (#63)
* database in test to read data injected into H2 database.
*Started reworking the repository Interfaces to extend CrudRepository<Dto, Long> to cut out some unnecessary extra classes
* Lots of work to get the database data to be seen by the ServiceImplTests
* Update gradle.yml
* updated versions